--- a/finimalism7.css
+++ b/finimalism7.css
@@ -18,7 +18,7 @@ html {
 }
 
 .backgroundContainer, .preload {
-	background-color: #0f031f;
+	background-color: #080112;
 }
 
 .itemsContainer.padded-left {
