--- a/finimalism7.css
+++ b/finimalism7.css
@@ -33,7 +33,7 @@ html {
 	left: 0;
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient(135deg, rgb(17.647% 4.706% 25.098%) 0%, rgb(15.743% 4.199% 26.604%) 6.25%, rgb(13.727% 3.992% 27.895%) 12.5%, rgb(11.672% 3.963% 28.966%) 18.75%, rgb(9.631% 4.022% 29.83%) 25%, rgb(7.648% 4.094% 30.51%) 31.25%, rgb(5.753% 4.158% 31.031%) 37.5%, rgb(3.96% 4.209% 31.417%) 43.75%, rgb(2.481% 4.247% 31.695%) 50%, rgb(1.458% 4.274% 31.886%) 56.25%, rgb(0.788% 4.292% 32.011%) 62.5%, rgb(0.38% 4.303% 32.086%) 68.75%, rgb(0.156% 4.31% 32.128%) 75%, rgb(0.049% 4.312% 32.148%) 81.25%, rgb(0.01% 4.313% 32.155%) 87.5%, rgb(0.001% 4.314% 32.157%) 93.75%, rgb(0% 4.314% 32.157%) 100% );
+	background: linear-gradient(90deg, rgb(8.627% 2.353% 18.431%) 0%, rgb(8.556% 2.353% 18.458%) 6.25%, rgb(8.344% 2.353% 18.536%) 12.5%, rgb(8% 2.353% 18.663%) 18.75%, rgb(7.536% 2.353% 18.833%) 25%, rgb(6.972% 2.353% 19.041%) 31.25%, rgb(6.328% 2.353% 19.279%) 37.5%, rgb(5.629% 2.353% 19.536%) 43.75%, rgb(4.902% 2.353% 19.804%) 50%, rgb(4.175% 2.353% 20.072%) 56.25%, rgb(3.476% 2.353% 20.329%) 62.5%, rgb(2.832% 2.353% 20.566%) 68.75%, rgb(2.268% 2.353% 20.774%) 75%, rgb(1.804% 2.353% 20.945%) 81.25%, rgb(1.46% 2.353% 21.072%) 87.5%, rgb(1.248% 2.353% 21.15%) 93.75%, rgb(1.176% 2.353% 21.176%) 100% );
 	background-size: cover;
 	opacity: 0;
 	z-index: -1;
@@ -48,7 +48,7 @@ html {
 	left: 0;
 	width: 100%;
 	height: 100vh;
-	background: linear-gradient(135deg, rgb(17.647% 4.706% 25.098%) 0%, rgb(15.743% 4.199% 26.604%) 6.25%, rgb(13.727% 3.992% 27.895%) 12.5%, rgb(11.672% 3.963% 28.966%) 18.75%, rgb(9.631% 4.022% 29.83%) 25%, rgb(7.648% 4.094% 30.51%) 31.25%, rgb(5.753% 4.158% 31.031%) 37.5%, rgb(3.96% 4.209% 31.417%) 43.75%, rgb(2.481% 4.247% 31.695%) 50%, rgb(1.458% 4.274% 31.886%) 56.25%, rgb(0.788% 4.292% 32.011%) 62.5%, rgb(0.38% 4.303% 32.086%) 68.75%, rgb(0.156% 4.31% 32.128%) 75%, rgb(0.049% 4.312% 32.148%) 81.25%, rgb(0.01% 4.313% 32.155%) 87.5%, rgb(0.001% 4.314% 32.157%) 93.75%, rgb(0% 4.314% 32.157%) 100% );
+	background: linear-gradient(90deg, rgb(8.627% 2.353% 18.431%) 0%, rgb(8.556% 2.353% 18.458%) 6.25%, rgb(8.344% 2.353% 18.536%) 12.5%, rgb(8% 2.353% 18.663%) 18.75%, rgb(7.536% 2.353% 18.833%) 25%, rgb(6.972% 2.353% 19.041%) 31.25%, rgb(6.328% 2.353% 19.279%) 37.5%, rgb(5.629% 2.353% 19.536%) 43.75%, rgb(4.902% 2.353% 19.804%) 50%, rgb(4.175% 2.353% 20.072%) 56.25%, rgb(3.476% 2.353% 20.329%) 62.5%, rgb(2.832% 2.353% 20.566%) 68.75%, rgb(2.268% 2.353% 20.774%) 75%, rgb(1.804% 2.353% 20.945%) 81.25%, rgb(1.46% 2.353% 21.072%) 87.5%, rgb(1.248% 2.353% 21.15%) 93.75%, rgb(1.176% 2.353% 21.176%) 100% );
 	background-size: cover;
 	opacity: 0.95;
 	filter: brightness(50%);
@@ -68,7 +68,7 @@ html {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(135deg, rgb(17.647% 4.706% 25.098%) 0%, rgb(15.743% 4.199% 26.604%) 6.25%, rgb(13.727% 3.992% 27.895%) 12.5%, rgb(11.672% 3.963% 28.966%) 18.75%, rgb(9.631% 4.022% 29.83%) 25%, rgb(7.648% 4.094% 30.51%) 31.25%, rgb(5.753% 4.158% 31.031%) 37.5%, rgb(3.96% 4.209% 31.417%) 43.75%, rgb(2.481% 4.247% 31.695%) 50%, rgb(1.458% 4.274% 31.886%) 56.25%, rgb(0.788% 4.292% 32.011%) 62.5%, rgb(0.38% 4.303% 32.086%) 68.75%, rgb(0.156% 4.31% 32.128%) 75%, rgb(0.049% 4.312% 32.148%) 81.25%, rgb(0.01% 4.313% 32.155%) 87.5%, rgb(0.001% 4.314% 32.157%) 93.75%, rgb(0% 4.314% 32.157%) 100% );
+	background: linear-gradient(90deg, rgb(8.627% 2.353% 18.431%) 0%, rgb(8.556% 2.353% 18.458%) 6.25%, rgb(8.344% 2.353% 18.536%) 12.5%, rgb(8% 2.353% 18.663%) 18.75%, rgb(7.536% 2.353% 18.833%) 25%, rgb(6.972% 2.353% 19.041%) 31.25%, rgb(6.328% 2.353% 19.279%) 37.5%, rgb(5.629% 2.353% 19.536%) 43.75%, rgb(4.902% 2.353% 19.804%) 50%, rgb(4.175% 2.353% 20.072%) 56.25%, rgb(3.476% 2.353% 20.329%) 62.5%, rgb(2.832% 2.353% 20.566%) 68.75%, rgb(2.268% 2.353% 20.774%) 75%, rgb(1.804% 2.353% 20.945%) 81.25%, rgb(1.46% 2.353% 21.072%) 87.5%, rgb(1.248% 2.353% 21.15%) 93.75%, rgb(1.176% 2.353% 21.176%) 100% );
 	background-size: cover;
 	opacity: 0.85;
 	z-index: -1;
@@ -87,7 +87,7 @@ html {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(135deg, rgb(17.647% 4.706% 25.098%) 0%, rgb(15.743% 4.199% 26.604%) 6.25%, rgb(13.727% 3.992% 27.895%) 12.5%, rgb(11.672% 3.963% 28.966%) 18.75%, rgb(9.631% 4.022% 29.83%) 25%, rgb(7.648% 4.094% 30.51%) 31.25%, rgb(5.753% 4.158% 31.031%) 37.5%, rgb(3.96% 4.209% 31.417%) 43.75%, rgb(2.481% 4.247% 31.695%) 50%, rgb(1.458% 4.274% 31.886%) 56.25%, rgb(0.788% 4.292% 32.011%) 62.5%, rgb(0.38% 4.303% 32.086%) 68.75%, rgb(0.156% 4.31% 32.128%) 75%, rgb(0.049% 4.312% 32.148%) 81.25%, rgb(0.01% 4.313% 32.155%) 87.5%, rgb(0.001% 4.314% 32.157%) 93.75%, rgb(0% 4.314% 32.157%) 100% );
+	background: linear-gradient(90deg, rgb(8.627% 2.353% 18.431%) 0%, rgb(8.556% 2.353% 18.458%) 6.25%, rgb(8.344% 2.353% 18.536%) 12.5%, rgb(8% 2.353% 18.663%) 18.75%, rgb(7.536% 2.353% 18.833%) 25%, rgb(6.972% 2.353% 19.041%) 31.25%, rgb(6.328% 2.353% 19.279%) 37.5%, rgb(5.629% 2.353% 19.536%) 43.75%, rgb(4.902% 2.353% 19.804%) 50%, rgb(4.175% 2.353% 20.072%) 56.25%, rgb(3.476% 2.353% 20.329%) 62.5%, rgb(2.832% 2.353% 20.566%) 68.75%, rgb(2.268% 2.353% 20.774%) 75%, rgb(1.804% 2.353% 20.945%) 81.25%, rgb(1.46% 2.353% 21.072%) 87.5%, rgb(1.248% 2.353% 21.15%) 93.75%, rgb(1.176% 2.353% 21.176%) 100% );
 	background-size: cover;
 	opacity: 0.925;
 	z-index: -1;
@@ -1614,7 +1614,6 @@ progress::-webkit-progress-value {
 	white-space: normal;
 	margin-left: 0em;
 	font-weight: 400;
-	font-size: 1.1em;
 }
 
 .cardText.cardTextCentered.cardText-secondary {
@@ -2155,14 +2154,12 @@ button.is-emby-button emby-button {
 
 .layout-desktop .homePage .section1.verticalSection .itemsContainer .card.overflowBackdropCard,
 .layout-tv .homePage .section1.verticalSection .itemsContainer .card.overflowBackdropCard {
-	width: 21.85em;
 	margin-top: 0em;
 	font-size: 90% !important;
 }
 
 .layout-desktop .overflowBackdropCard,
 .layout-tv .overflowBackdropCard {
-	width: 25em;
 }
 
 .verticalSection .card img {
@@ -2418,14 +2415,12 @@ button.is-emby-button emby-button {
 
 .layout-desktop .overflowBackdropCard,
 .layout-tv .overflowBackdropCard {
-	width: 21.85em;
 	font-size: 90% !important;
 	filter: drop-shadow(4px 5px 2px rgba(2, 2, 2, 0.5));
 }
 
 .layout-desktop .verticalSection.section2 .card.overflowBackdropCard,
 .layout-tv .verticalSection.section2 .card.overflowBackdropCard {
-	width: 21.85em !important;
 	font-size: 90% !important;
 }
 
@@ -3330,7 +3325,7 @@ a[href*="shokoanime.com"] {
 	justify-content: space-evenly;
 	top: 26.6em;
 	z-index: 2;
-	background: #1e0c33a8;
+	background: #0c0515c2;
 	border-radius: 0em;
 	margin: 1.25em 0;
 }
@@ -3547,5 +3542,123 @@ a[href*="shokoanime.com"] {
 
 @media (min-aspect-ratio: 21/9) and (max-aspect-ratio: 30/9) and (min-width: 3000px) and (max-width: 3440px) {
 	body {
+	}
+}
+
+.layout-desktop #homeTab .verticalSection.emby-scroller-container,
+.layout-tv #homeTab .verticalSection.emby-scroller-container {
+  display: inline-grid;
+  width: 50%;
+}
+
+.layout-desktop #homeTab .verticalSection.section0.emby-scroller-container,
+.layout-tv #homeTab .verticalSection.section0.emby-scroller-container {
+  display: initial !important;
+}
+
+.layout-desktop #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-tv #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-desktop #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-tv #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-desktop #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-tv #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-desktop #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-tv #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-desktop #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-tv #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-desktop #homeTab .section3 .verticalSection.emby-scroller-container,
+.layout-tv #homeTab .section3 .verticalSection.emby-scroller-container {
+	display: inline-block !important;
+	width: 100%;
+}
+
+.layout-desktop .overflowPortraitCard, 
+.layout-tv .overflowPortraitCard,
+.layout-desktop .overflowSquareCard, 
+.layout-tv .overflowSquareCard {
+  width: 14.7em;
+}
+
+.layout-desktop #homeTab .sectionTitle.sectionTitle-cards,
+.layout-tv #homeTab .sectionTitle.sectionTitle-cards {
+  margin-left: 0.5em !important;
+}
+
+.sectionTitle.sectionTitle-cards {
+  font-size: 1.25em;
+  font-style: italic;
+}
+
+.layout-desktop div:not(.sectionTitleContainer-cards) > .sectionTitle-cards,
+.layout-tv div:not(.sectionTitleContainer-cards) > .sectionTitle-cards {
+	margin: 0;
+	padding-bottom: 0em;
+	padding-top: 0em;
+}
+
+#itemDetailPage button[data-direction="left"] {
+	right: 3.5em;
+	position: absolute;
+	top: 0em;
+	z-index: 50;
+	font-size: 1.5em;
+	color: #fff;
+	height: 2em;
+	border-radius: 0.1em;
+	cursor: pointer;
+	opacity: 0.1;
+	margin: 0;
+	width: 2em;
+	padding: 0;
+	padding-top: 0.5em;
+}
+
+#itemDetailPage button[data-direction="right"] {
+	right: 0em;
+	position: absolute;
+	top: 0em;
+	z-index: 50;
+	font-size: 1.5em;
+	color: #fff;
+	height: 2em;
+	border-radius: 0.1em;
+	cursor: pointer;
+	opacity: 0.1;
+	margin: 0;
+	width: 2em;
+	padding: 0;
+	padding-top: 0.5em;
+}
+
+.layout-desktop #itemDetailPage .detailVerticalSection,
+.layout-tv #itemDetailPage .detailVerticalSection,
+.layout-desktop #itemDetailPage .itemDetailsGroup,
+.layout-tv #itemDetailPage .itemDetailsGroup {
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+}
+
+.layout-desktop .sections.homeSectionsContainer,
+.layout-tv .sections.homeSectionsContainer {
+	margin-left: -0.5em;
+}
+
+@media (min-width: 1000px) {
+	.layout-desktop .card.overflowBackdropCard, 
+	.layout-tv .card.overflowBackdropCard {
+		width: 12.25vw;
+	}
+	.layout-desktop .overflowPortraitCard, 
+	.layout-tv .overflowPortraitCard,
+	.layout-desktop .overflowSquareCard, 
+	.layout-tv .overflowSquareCard {
+		width: 9.8vw;
+	}
+}
+
+@media (max-height: 800px) and (max-width: 1500px) {
+	.layout-desktop body, 
+	.layout-tv body {
+		font-size: 73% !important;
 	}
 }
