--- a/finimalism7.css
+++ b/finimalism7.css
@@ -1529,9 +1529,9 @@ progress::-webkit-progress-value {
 
 .layout-desktop .itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-wrap,
 .layout-tv .itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-wrap {
-	padding-left: calc(1vw + 1em);
 	padding-right: 1vw;
 	justify-content: space-evenly;
+	padding-left: 0;
 }
 
 #homeTab .emby-scroller {
@@ -2904,6 +2904,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 	-webkit-filter: drop-shadow(0px 0px 1.5px rgb(0, 0, 0));
 	filter: drop-shadow(0px 0px 1.5px rgb(0, 0, 0));
 	color: #fff;
+	transform: translateX(-2%);
 }
 
 .collectionItems {
@@ -3678,7 +3679,6 @@ a[href*="shokoanime.com"] {
 
 .sectionTitle.sectionTitle-cards {
   font-size: 1.25em;
-  font-style: italic;
 }
 
 .layout-desktop div:not(.sectionTitleContainer-cards) > .sectionTitle-cards,
