--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/tedhinklater/finimalism@main/finimalism7.css");
+
 /* Backdrop */
 .backgroundContainer {
 	background: #000;
