--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -46,7 +46,8 @@
 	background-size: cover;
 	opacity: 1;
 	z-index: -1;
-    backdrop-filter: saturate(25%) contrast(150%) blur(3px);
+        backdrop-filter: saturate(25%) contrast(150%) blur(2px);
+        filter: drop-shadow(0px 3px 4px #000a);
 }
 
 .detailPageSecondaryContainer {
