--- a/finimalism7.css
+++ b/finimalism7.css
@@ -2459,9 +2459,10 @@ button.is-emby-button emby-button {
 	width: 18.15em !important; 
 }
 
-.layout-desktop .overflowBackdropCard,
-.layout-tv .overflowBackdropCard {
-	filter: drop-shadow(4px 5px 2px rgba(2, 2, 2, 0.5));
+.layout-desktop .overflowBackdropCard, .layout-tv .overflowBackdropCard,
+.layout-desktop .overflowPortraitCard, .layout-tv .overflowPortraitCard, 
+.layout-desktop .overflowSquareCard, .layout-tv .overflowSquareCard {
+	filter: drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.68));
 }
 
 .layout-desktop .verticalSection.section2 .card.overflowBackdropCard,
